--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <p>Total Score</p>
         <h1 id="game-score">0</h1>
         
-        <button id="game-btn" class="btn btn-primary btn-dark" type="button">Start Game</button>
+        <button id="game-btn" class="btn btn-primary btn-lg  btn-dark" type="button">Start Game</button>
 
     </div>
     
